[gd_scene load_steps=4 format=3 uid="uid://bllgrt35gme8b"]

[ext_resource type="PackedScene" uid="uid://bimjavdw4ifpw" path="res://scenes/windows/window_base.tscn" id="1_gdsqb"]
[ext_resource type="Theme" uid="uid://b1v6gwakv465t" path="res://scenes/windows/window.tres" id="1_twfht"]
[ext_resource type="Script" path="res://scenes/windows/window_new_invoice.gd" id="2_f5t6r"]

[node name="window_new_invoice" instance=ExtResource("1_gdsqb")]
title = "Neue Rechnung"
script = ExtResource("2_f5t6r")

[node name="v_box" type="VBoxContainer" parent="content" index="0"]
layout_mode = 2
theme = ExtResource("1_twfht")

[node name="customer" type="HBoxContainer" parent="content/v_box" index="0"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme = ExtResource("1_twfht")

[node name="customer_description" type="Label" parent="content/v_box/customer" index="0"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("1_twfht")
text = "Kunde:"
vertical_alignment = 1

[node name="customer_input" type="LineEdit" parent="content/v_box/customer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_twfht")

[node name="create_invoice" type="Button" parent="content/v_box" index="1"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Rechnung erstellen"

[connection signal="pressed" from="content/v_box/create_invoice" to="." method="_on_create_invoice_pressed"]
